tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/dns/a/tcp_ipv6/_test_context/ServiceEntry.1493793959.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dns
  namespace: echo-2-98059
spec:
  addresses:
  - 1234:1234:1234::1234:1234:1234
  endpoints: []
  hosts:
  - fake.service.local
  ports:
  - name: http
    number: 80
    protocol: HTTP
  resolution: STATIC
